Playing around with the styling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <script type="module" src="app.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
-<body style="--circle-1-start:0deg; --circle-2-start:0deg; --circle-3-start:0deg;">
+<body class="start start-transition" style="--circle-1-start:0deg; --circle-2-start:0deg; --circle-3-start:0deg;">
+  
   <div class="circle-wrapper">
     <div class="circle-text style-1">Keep high ambitions if you like</div>
     <div class="circle-text style-2">Dream big dreams if you want to</div>
